--- a/src/views/follow.ejs
+++ b/src/views/follow.ejs
@@ -23,8 +23,8 @@
         </section>
 
         <section id="buttons">
-            <button class="grow_hover">Add +</button>
-            <button class="grow_hover">Track</button>
-            <button class="grow_hover">Notify Me</button>
+            <button class="button">Add +</button>
+            <button class="button">Track</button>
+            <button class="button">Notify Me</button>
         </section>
     </section>
