--- a/src/public/stylesheets/general.css
+++ b/src/public/stylesheets/general.css
@@ -60,14 +60,12 @@ body {
 TODO: Delete/modify once all views have been properly implemented
 */
 
-#aside {
+aside {
     grid-area: aside;
-    background-color: blue;
 }
 
-#footer {
+footer {
     grid-area: footer;
-    background-color: magenta;
     width: 100%;
 }
 
@@ -100,6 +98,29 @@ button {
     background-position-y: center;
 }
 
+/* Makes input elements look like buttons */
+.button {
+    background-color: white;
+    border-style: none;
+    font-weight: bolder;
+    min-width: 80px;
+    width: fit-content;
+    border-radius: 15px;
+    padding: 0px 20px;
+    height: 35px;
+    box-shadow: rgba(0, 0, 0, 0.03) 0px 5px 10px, rgba(0, 0, 0, 0.03) 0px 6px 6px;
+    transition: all .1s ease-out !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+.button:hover {
+    transform: scale(1.07) !important;
+    cursor: pointer;
+}
+
 
 /* Float on Hover */
 
@@ -115,5 +136,5 @@ button {
 /* Box Shadow */
 
 .shadow {
-    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    box-shadow: rgba(0, 0, 0, 0.03) 0px 5px 10px, rgba(0, 0, 0, 0.03) 0px 6px 6px;
 }
