--- a/src/public/stylesheets/settings.css
+++ b/src/public/stylesheets/settings.css
@@ -1,5 +1,4 @@
 #settings_container {
-    background-color: #87878a;
     width: 100%;
     height: fit-content !important;
     display: flex;
@@ -28,7 +27,7 @@ div#settings > h1 {
     margin-top: 50px;
 }
 
-div#settings input {
+div#settings .input {
     border-style: none;
     border-radius: 5px;
 }
@@ -103,32 +102,9 @@ section.settings_section#user_info form > label > input:last-child {
     align-self: flex-end;
 }
 
-section.settings_section form > label > input {
+section.settings_section form .input {
     height: 40px;
     width: 350px;
     margin-top: 5px;
     font-size: 16px;
-}
-
-/* Makes input elements look like buttons */
-div#settings .button {
-    background-color: white;
-    border-style: none;
-    font-weight: bolder;
-    min-width: 80px;
-    width: fit-content;
-    border-radius: 15px;
-    padding: 0px 20px;
-    height: 35px;
-    box-shadow: rgba(0, 0, 0, 0.03) 0px 5px 10px, rgba(0, 0, 0, 0.03) 0px 6px 6px;
-    transition: all .1s ease-out;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
-}
-
-div#settings .button:hover {
-    transform: scale(1.07);
-    cursor: pointer;
 }
