--- a/src/views/rooms.ejs
+++ b/src/views/rooms.ejs
@@ -1,15 +1,24 @@
 <section id="rooms">
 
+    <form method="POST" action="/rooms/new" enctype="multipart/form-data">
+        <label for="name"></label>
+        <input type="text" name="name" id="name">
+
+        <label for="description"></label>
+        <input type="text" name="description" id="description">
+
+        <input type="submit" value="Make new room">
+    </form>
+
     <!-- pubblic rooms -->
     <article class="rooms_section" id="general">
       <h1>Chat Rooms</h1>
       <ul class="discover_lineup">
             <!-- Used place holders -->
-            <% let rooms = [{"title": "Chat 1" , "img" : "/images/chat.png" }, {"title": "Chat 2" , "img" : "/images/chat.png" }, {"title": "Chat 3" , "img" : "/images/chat.png" }] %>
             <% rooms.forEach( item => { %>
-                <li class="discover_item grow_hover shadow"><a href="/item/info">
-                    <img src="<%= item.img %>" alt="<%= item.title %>">
-                    <h1><%= item.title %></h1>
+                <li class="discover_item grow_hover shadow"><a href="/rooms/<%= item._id %>">
+                    <img src="<%= pngUrl(item.icon) %>" alt="<%= item.name %>">
+                    <h1><%= item.name %></h1>
                 </a></li>
             <% }) %>
   
@@ -22,9 +31,9 @@
         <ul class="discover_lineup">
               <!-- Used place holders -->
               <% rooms.forEach( item => { %>
-                  <li class="discover_item grow_hover shadow"><a href="/item/info">
-                      <img src="<%= item.img %>" alt="<%= item.title %>">
-                      <h1><%= item.title %></h1>
+                  <li class="discover_item grow_hover shadow"><a href="/rooms/<%= item._id %>">
+                      <img src="<%= pngUrl(item.icon) %>" alt="<%= item.name %>"  >
+                      <h1><%= item.name %></h1>
                   </a></li>
               <% }) %>
     
