--- a/src/views/includes/room_msg.ejs
+++ b/src/views/includes/room_msg.ejs
@@ -1,20 +1,20 @@
 <!-- Messages sent by current user have an additional class -->
 <!-- For testing purposes, assume current user is user3-->
-<% if (msg.user.id === 'user3') { %>
-    <% if (msg.user.id === prev) { %> 
+<% if (msg.user === author) { %>
+    <% if (msg.user === prev) { %> 
         <section class="message stream mine">
     <% } else { %>
         <section class="message mine">
-        <% prev = msg.user.id %>
+        <% prev = msg.user %>
     <% } %>
 <% } else { %>
-    <% if (msg.user.id === prev) { %> 
+    <% if (msg.user === prev) { %> 
         <section class="message stream">
     <% } else { %>
         <section class="message">
-        <% prev = msg.user.id %>
+        <% prev = msg.user %>
     <% } %>
 <% } %>
-    <h1 id="username"> <%= msg.user.username %> </h1>
-    <p id="msg"> <%= msg.msg %> </p>
+    <h1 id="username"> <%= msg.username %> </h1>
+    <p id="msg"> <%= msg.body %> </p>
 </section>
