--- a/src/views/includes/room_member.ejs
+++ b/src/views/includes/room_member.ejs
@@ -1,4 +1,4 @@
-<li class="room_member <%= user.role %> ">
-    <img src="images/user1.png" alt="<%= user.username %>">
+<li class="room_member <%= role %> ">
+    <img src="/images/user1.png" alt="<% user.username %>">
     <h1 id="username"> <%= user.username %> </h1>
 </li>
