--- a/src/public/stylesheets/single_room.css
+++ b/src/public/stylesheets/single_room.css
@@ -1,7 +1,7 @@
 #room_container {
+    height: 100%;
+    width: 100%;
     background-color: #87878a;
-    height: 100vh;
-    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,7 +11,7 @@
     height: 100%;
     width: 100%;
     min-width: 700px;
-    max-width: 1400px;
+    max-width: 1400px; 
     display: grid;
     grid-template-columns: 1fr 300px;
     grid-template-rows: 1fr 75px;
