--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -11,5 +11,6 @@
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel='stylesheet' href='/stylesheets/aside.css' />
     <link rel='stylesheet' href='/stylesheets/login_signup.css'  />
-    <link rel='stylesheet' href='stylesheets/settings.css'  />
+    <link rel='stylesheet' href='/stylesheets/settings.css'  />
+    <link rel='stylesheet' href='/stylesheets/single_room.css' />
 </head>
