Restructured a portion of profile.ejs to include missing user info

--- a/src/views/includes/head.ejs
+++ b/src/views/includes/head.ejs
@@ -11,4 +11,5 @@
     <link rel='stylesheet' href='/stylesheets/footer.css' />
     <link rel='stylesheet' href='/stylesheets/aside.css' />
     <link rel='stylesheet' href='/stylesheets/login_signup.css'  />
+    <link rel='stylesheet' href='/stylesheets/profile.css'  />
 </head>
