--- a/src/public/stylesheets/profile.css
+++ b/src/public/stylesheets/profile.css
@@ -29,7 +29,7 @@
 }
 
 /* User Info */
-#profile > #top_section > #user_info {
+#user_info_area {
     background-color: rgb(199, 197, 197);
     margin-left: 10px;
     display: flex;
@@ -39,7 +39,26 @@
     border-radius: 10px;
 }
 
-#profile #user_info > #ppic {
+#user_info_area > button {
+    margin-top: auto; /* make button stay at bottom */
+    margin-bottom: 15px;
+}
+
+#pic_and_username {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+#pic_and_username > h1 {
+    font-size: 26px;
+    letter-spacing: 0.75px;
+}
+
+#pic_and_username > #ppic {
     background-color: white;
     margin: 20px 20px 0px 20px;
     max-height: 400px;
@@ -47,15 +66,42 @@
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
 }
 
-#profile #user_info > h1 {
-    font-size: 26px;
-    letter-spacing: 0.75px;
+#user_info_area > #info {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    margin: 15px 0px;
 }
 
-#profile #user_info > #user_bio {
+#user_info_area > #info > * {
+    width: 100%;
+}
+
+#info > #name, #info > #name > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+}
+
+#info p {
+    font-size: 18px;
+}
+
+#info > #email {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#user_info_area > #bio {
     background-color: white;
-    min-height: 220px;
-    margin: 20px 20px 0px 20px;
+    height: fit-content;
+    margin: 0px 20px 0px 20px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
