--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -4,20 +4,36 @@
 
         <div id="top_section">
 
-            <section id="user_info">
-                <img id="ppic" src="<%= user.ppic %>">
-                <div id="info">
+            <section id="user_info_area">
+
+                <div id="pic_and_username">
+                    <img id="ppic" src="<%= user.ppic %>">
                     <h1><%= user.username %></h1>
-                    <div id="name">
-                        <h1><%=user.name%></h1>
-                        <h1><%=user.surname%></h1>
-                    </div>
-                    <p><%=user.email%></p>
                 </div>
-                <div id="user_bio">
+
+                <div id="info">
+                    <div id="name">
+                        <div>
+                            <h2>Name:</h2>
+                            <p><%=user.name%></p>
+                        </div>
+                        <div>
+                            <h2>Surname:</h2>
+                            <p><%=user.surname%></p>
+                        </div>
+                    </div>
+                    <div id="email">
+                        <h2>Email:</h2>
+                        <p><%=user.email%></p>
+                    </div>
+                </div>
+                
+                <div id="bio">
                     <p><%= user.bio %></p>
                 </div>
+
                 <button class="button" type="button" id="settings" name="settings"> Settings </button>
+
             </section>
 
             <section id="data">
