--- a/src/public/stylesheets/friendlist.css
+++ b/src/public/stylesheets/friendlist.css
@@ -1,3 +1,13 @@
+:root {
+    --deepblue: #3B54BA;
+    --blue: #5889C5;
+    --lightblue: #90C1DA;
+    --lightpink: #A79DDC;
+    --pink:#9A71C1;
+    --purple: #6859BA;
+    --white: #f0f0f0;
+}
+
 section#friendlist {
     width: 85%;
     min-width: 400px;
@@ -9,7 +19,7 @@ section#friendlist {
     grid-template-areas: "pg bm"
 }
 
-section.page {
+#page {
     border-radius: 10px 0px 0px 10px;
     grid-area: pg;
     z-index: 12;
@@ -17,7 +27,8 @@ section.page {
     max-height: 650px;
 }
 
-section.page>h1 {
+
+#page>h1 {
     padding-left: 20px;
     margin-top: 35px;
     margin-left: 20px;
@@ -25,8 +36,32 @@ section.page>h1 {
     letter-spacing: .2em;
 }
 
-section#your_friends {
-    background-color: #CDD0B9;
+/* Change color based on content */
+
+#page.friends {
+    background-color: var(--pink) !important;
+}
+
+#page.friends li.friend #info {
+    background-color: var(--lightpink);
+}
+
+#page.requests {
+    background-color: var(--lightblue) !important;
+}
+
+#page.requests li.friend #info {
+    background-color: var(--deepblue);
+    color: #f0f0f0 !important;
+}
+
+#page.sent_requests {
+    background-color: var(--deepblue) !important;
+}
+
+#page.sent_requests  li.friend #info {
+    background-color: var(--lightblue);
+    color: #f0f0f0 !important;
 }
 
 section#bookmarks {
@@ -34,6 +69,7 @@ section#bookmarks {
     display: grid;
     grid-template-columns: auto;
     grid-template-rows: repeat(19, 1fr);
+    text-shadow: rgba(0, 0, 0, 0.1) 0px 5px 10px, rgba(0, 0, 0, 0.1) 0px 3px 3px;
 }
 
 section#bookmarks>div.bookmark {
@@ -69,22 +105,22 @@ section#bookmarks :last-child {
 section#bookmarks>*::before {
     width: 90%;
     padding-left: 15px;
-    color: #181818;
+    color: #f0f0f0;
 }
 
 
 /* Bookmark Colors */
 
 section#bookmarks :nth-child(1) {
-    background-color: #7F4F24;
+    background-color: var(--deepblue);
 }
 
 section#bookmarks :nth-child(2) {
-    background-color: #936639;
+    background-color: var(--blue);
 }
 
 section#bookmarks :nth-child(3) {
-    background-color: #A68A64;
+    background-color: var(--lightblue);
 }
 
 section#bookmarks :nth-child(3)::before {
@@ -92,11 +128,11 @@ section#bookmarks :nth-child(3)::before {
 }
 
 section#bookmarks :nth-child(4) {
-    background-color: #B6AD90;
+    background-color: var(--lightpink);
 }
 
 section#bookmarks :nth-child(5) {
-    background-color: #CDD0B9;
+    background-color: var(--pink);
     z-index: 5 !important;
     width: 100% !important;
 }
@@ -106,11 +142,11 @@ section#bookmarks :nth-child(5)::before {
 }
 
 section#bookmarks :nth-child(6) {
-    background-color: #B3B998;
+    background-color: var(--purple);
 }
 
 section#bookmarks :nth-child(7) {
-    background-color: #828A69;
+    background-color: var(--deepblue);
 }
 
 section#bookmarks :nth-child(7)::before {
@@ -118,21 +154,21 @@ section#bookmarks :nth-child(7)::before {
 }
 
 section#bookmarks :nth-child(8) {
-    background-color: #60684B;
+    background-color: var(--blue);
 }
 
 section#bookmarks :nth-child(9) {
-    background-color: #47533D;
+    background-color: var(--lightblue);
 }
 
 
 /* Friend items */
 
-.page > #list {
+#page > #list {
     height: 100%;
 }
 
-section.page ul {
+#page ul {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -148,7 +184,7 @@ li.friend {
 
 li.friend #info {
     display: flex;
-    background-color: #B3B998;
+    background-color: black;
     align-items: center;
     padding: 10px 20px;
     gap: 20px;
