--- a/src/public/stylesheets/header.css
+++ b/src/public/stylesheets/header.css
@@ -1,4 +1,6 @@
 #header {
+    background: rgb(59,84,186);
+background: linear-gradient(90deg, rgba(59,84,186,1) 0%, rgba(154,113,193,1) 100%);
     width: 100%;
     grid-area: header;
     display: flex;
@@ -6,7 +8,6 @@
     position: sticky;
     top: 0px;
     z-index: 15 !important;
-    background-color: white;
 }
 
 #header>section {
@@ -19,6 +20,7 @@
 }
 
 #header #title h1 {
+    color: #f0f0f0;
     font-size: 4em;
     font-family: Arial, Helvetica, sans-serif;
 }
