--- a/src/public/stylesheets/discover.css
+++ b/src/public/stylesheets/discover.css
@@ -1,3 +1,14 @@
+:root {
+    --deepblue: #3B54BA;
+    --blue: #5889C5;
+    --lightblue: #90C1DA;
+    --lightpink: #A79DDC;
+    --pink:#9A71C1;
+    --purple: #6859BA;
+    --white: #f0f0f0;
+    --black: #2d2d2d;
+}
+
 article.discover_section {
     padding: 35px 20px;
     display: flex;
@@ -5,8 +16,12 @@ article.discover_section {
     align-items: center;
 }
 
+.discover_section #no_collections {
+    font-size: 25px;
+}
+
 article.discover_section > h1 {
-    font-size: 2.2em;
+    font-size: 2.5em;
     letter-spacing: 3px;
     margin-bottom: 10px;
     width: fit-content;
@@ -14,7 +29,7 @@ article.discover_section > h1 {
 
 ul.discover_lineup {
     list-style-type: none;
-    background-color:rgba(0, 0, 0, 0.25);
+    background: linear-gradient(45deg, var(--deepblue) 0%, var(--pink) 30%, var(--lightblue));
     border-radius: 15px;
     display: flex;
     flex-wrap: wrap;
@@ -50,6 +65,6 @@ li.discover_item h1 {
 /* On Hover */
 
 li.discover_item:hover {
-    transform: scale(1.09) !important;
+    transform: scale(1.05) !important;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 15px 45px;
 }
