--- a/src/public/stylesheets/footer.css
+++ b/src/public/stylesheets/footer.css
@@ -1,4 +1,3 @@
-
 :root {
     --deepblue: #3B54BA;
     --blue: #5889C5;
@@ -7,6 +6,7 @@
     --pink:#9A71C1;
     --purple: #6859BA;
     --white: #f0f0f0;
+    --black: #2d2d2d;
 }
 
 #chat {
