--- a/src/public/stylesheets/profile.css
+++ b/src/public/stylesheets/profile.css
@@ -1,5 +1,15 @@
+:root {
+    --deepblue: #3B54BA;
+    --blue: #5889C5;
+    --lightblue: #90C1DA;
+    --lightpink: #A79DDC;
+    --pink:#9A71C1;
+    --purple: #6859BA;
+    --white: #f0f0f0;
+    --black: #2d2d2d;
+}
+
 #profile_container {
-    background-color: #87878a;
     width: 100%;
     height: fit-content !important;
     display: flex;
@@ -9,11 +19,12 @@
 }
 
 #profile {
-    background-color: #f0f0f0;
+    background-color: var(--white);
     height: 100%;
     width: 100%;
     min-width: 700px;
     max-width: 1400px;
+    padding-bottom: 20px;
 }
 
 #profile > h1 {
@@ -29,8 +40,8 @@
 }
 
 /* User Info */
-#profile > #top_section > #user_info {
-    background-color: rgb(199, 197, 197);
+#user_info_area {
+    background-color: var(--lightpink);
     margin-left: 10px;
     display: flex;
     flex-direction: column;
@@ -39,23 +50,72 @@
     border-radius: 10px;
 }
 
-#profile #user_info > #ppic {
-    background-color: white;
+#user_info_area > button {
+    margin-top: auto; /* make button stay at bottom */
+    margin-bottom: 15px;
+}
+
+#pic_and_username {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+
+#pic_and_username > h1 {
+    font-size: 26px;
+    letter-spacing: 0.75px;
+}
+
+#pic_and_username > #ppic {
+    background-color: var(--white);
     margin: 20px 20px 0px 20px;
     max-height: 400px;
     border-radius: 500px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
 }
 
-#profile #user_info > h1 {
-    font-size: 26px;
-    letter-spacing: 0.75px;
+#user_info_area > #info {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+    margin: 15px 0px;
 }
 
-#profile #user_info > #user_bio {
-    background-color: white;
-    min-height: 220px;
-    margin: 20px 20px 0px 20px;
+#user_info_area > #info > * {
+    width: 100%;
+}
+
+#info > #name, #info > #name > div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 10px;
+}
+
+#info p {
+    font-size: 18px;
+}
+
+#info > #email {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+#user_info_area > #bio {
+    background-color: var(--white);
+    max-height: 150px;
+    width: 450px;
+    overflow-y: scroll;
+    word-wrap: break-word;
+    margin: 0px 20px 0px 20px;
     padding: 15px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
@@ -63,25 +123,72 @@
 
 /* Social */
 #profile > #friends {
-    margin-top: 30px;
-    background-color: white;
+    margin: 30px 15px 0px 15px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
 }
 
 #profile > #friends > section {
-    height: 300px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
     padding: 10px;
 }
 
-#profile > #friends > section > div {
-    background-color: rgb(199, 197, 197);
-    border-radius: 5px;
-    height: 100%;
-    width: 100%;
+#friends > #friends_list {
+    background-color: var(--pink);
+}
+
+#friends > #friendrequests {
+    background-color: var(--purple);
+}
+
+#friends > #blocked {
+    background-color: var(--deepblue);
+}
+
+#profile > #friends > section > h3 {
+    font-size: 20px;
+    letter-spacing: 0.5px;
+    color: var(--white);
+}
+
+#friends > section > .list {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 90%;
+    height: 300px;
+}
+
+#friends > section > .list > .no_friends {
+    max-width: 80%;
+    font-size: 20px;
+    color: var(--white);
+}
+
+#friends > section > button {
+    margin-top: auto;
+}
+
+#friends > section > .list > .friend {
+    background-color: rgb(240, 240, 240);
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    height: 65px;
+    width: 80%;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 10px 20px, rgba(0, 0, 0, 0.05) 0px 6px 6px;
+}
+
+#friends li.friend > img {
+    height: 100%
 }
 
 /* Wallet Data */
@@ -111,31 +218,70 @@
 }
 
 #profile > #top_section > #data .tracking_list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    height: 200px;
-    border-radius: 10px;
-    background-color: rgb(199, 197, 197);
-    max-width: 650px;
-}
-
-.tracking_list > ul {
-    width: 100%;
+    width: 80%;
     min-height: 150px;
+    height: 60%;
     list-style-type: none;
     display: flex;
-    flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
     gap: 10px;
+    border-radius: 10px;
 }
 
-.tracking_list > ul > li {
+#tracking .tracking_list {
+    background-color: var(--deepblue);
+}
+
+#recentlyviewed .tracking_list {
+    background-color: var(--blue);
+}
+
+#data .tracking_list > div {
+    max-width: 80%;
+    font-size: 20px;
+    color: var(--white);
+}
+
+
+.tracking_list > li {
+    list-style-type: none;
     background-color: white;
     height: 100px;
-    min-width: 100px;
+    width: 100px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
+}
+
+.tracking_list > li > img {
+    height: 100%;
+}
+
+/* Buttons */
+/* TODO: Merge with other instances of this code */
+/* Makes input elements look like buttons */
+.button {
+    background-color: white;
+    border-style: none;
+    font-weight: bolder;
+    min-width: 80px;
+    width: fit-content;
+    border-radius: 15px;
+    padding: 0px 20px;
+    height: 35px;
+    box-shadow: rgba(0, 0, 0, 0.03) 0px 5px 10px, rgba(0, 0, 0, 0.03) 0px 6px 6px;
+    transition: all .1s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+}
+
+.button:hover {
+    transform: scale(1.07);
+    cursor: pointer;
 }
