Replaced wrong icon appearing for follow page in navbar

--- a/src/public/stylesheets/navbar.css
+++ b/src/public/stylesheets/navbar.css
@@ -134,7 +134,7 @@
     background-image: url("/images/exchange.svg");
 }
 
-.nav-icon#followed {
+.nav-icon#follow {
     background-image: url("/images/followed.svg");
 }
 
